Bug 320202 - Bad error message when PocketSPHINX does not accept model
Summary: Bad error message when PocketSPHINX does not accept model
Status: RESOLVED FIXED
Alias: None
Product: simon
Classification: Unmaintained
Component: simond (other bugs)
Version First Reported In: 0.4.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Grasch
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-24 08:33 UTC by Peter Grasch
Modified: 2013-06-02 19:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Grasch 2013-05-24 08:33:04 UTC
Whenever SPHINX rejects the active model, the only error message we get is "Failed to setup recognition" (without details anywhere).

Moreover, blocked words (missing triphones) are not reported by the client.
Comment 1 Peter Grasch 2013-06-02 19:36:41 UTC
Git commit 2a8d05a78397a7c12bd12387376f425be0dff419 by Peter Grasch.
Committed on 02/06/2013 at 21:34.
Pushed by grasch into branch 'master'.

Detailed error reporting for the SPHINX recognizer

Because PocketSPHINX lacks proper error channel redirection, we write
the debug output to a file that is then read by the recognizer
abstraction. Sadly this won't work properly in multi-user environments
*and* introduces additional overhead but should at least cover the
standard use case of a local Simond.

M  +21   -3    simonlib/simonrecognizer/sphinxrecognizer.cpp
M  +3    -0    simonlib/simonrecognizer/sphinxrecognizer.h

http://commits.kde.org/simon/2a8d05a78397a7c12bd12387376f425be0dff419