Detailed error reporting for the SPHINX recognizer

Because PocketSPHINX lacks proper error channel redirection, we write
the debug output to a file that is then read by the recognizer
abstraction. Sadly this won't work properly in multi-user environments
*and* introduces additional overhead but should at least cover the
standard use case of a local Simond.
BUG: 320202